test/message/undefined_reference_in_new_context.chakracore.out
before
evalmachine.<anonymous>:1
foo.bar = 5;
^

TypeError: Unable to set property 'bar' of undefined or null reference
   at Global code (evalmachine.<anonymous>:1:1)
   at Script.prototype.runInContext (vm.js:*)
   at Script.prototype.runInNewContext (vm.js:*)
   at runInNewContext (vm.js:*)
   at Anonymous function (*test*message*undefined_reference_in_new_context.js:*)
   at Module.prototype._compile (internal/modules/cjs/loader.js:*:*)
   at Module._extensions[.js] (internal/modules/cjs/loader.js:*:*)
   at Module.prototype.load (internal/modules/cjs/loader.js:*:*)
   at tryModuleLoad (internal/modules/cjs/loader.js:*)
   at Module._load (internal/modules/cjs/loader.js:*:*)